--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -425,8 +425,7 @@ body,
 
 .ce-their-message-body {
   font-family: "Rubik" !important;
-  background-color: $gray-300 !important;
-  color: $tertiary-50 !important;
+  color: $primary-500 !important;
   border-radius: 8px !important;
   font-size: 14px !important;
 }
