--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,9 +2,10 @@
 
 $gray-300: #a3a3a3;
 $gray-400: #858585;
+$gray-500: #323437;
 $primary-400: #35596c;
-$primary-500: #0f2936;
-$primary-600: #091d2b;
+$primary-500: #121820;
+$primary-600: #0d1117;
 $primary-700: #051926;
 $primary-800: #060f14;
 $secondary-300: #7ac5d7;
@@ -302,7 +303,7 @@ body,
 .ce-chat-list-column {
   background-color: $primary-600 !important;
   overflow-y: hidden !important;
-  border-right: 1px solid $primary-400 !important;
+  border-right: 1px solid $gray-500 !important;
 }
 
 .ce-chat-form {
@@ -373,7 +374,7 @@ body,
 }
 
 .ce-chat-feed {
-  background-color: $primary-700 !important;
+  background-color: $primary-600 !important;
 }
 
 .chat-header {
@@ -424,7 +425,7 @@ body,
 .ce-message-list {
   background-color: $primary-800 !important;
   height: calc((100% - 100px) - 68px) !important;
-  border-bottom: 1px solid $primary-400 !important;
+  border-bottom: 1px solid $gray-500 !important;
 }
 
 .ce-message-list::-webkit-scrollbar-track {
@@ -500,7 +501,7 @@ body,
 /* Chat Settings */
 .ce-chat-settings-column {
   background-color: $primary-500;
-  border-left: 1px solid $primary-400 !important;
+  border-left: 1px solid $gray-500 !important;
   overflow-y: hidden !important;
 }
 
@@ -528,7 +529,7 @@ body,
 .ce-chat-settings-title {
   font-family: "Rubik" !important;
   padding: 20px 0 0 0 !important;
-  border-top: 1px solid $primary-400 !important;
+  border-top: 1px solid $gray-500 !important;
 }
 
 .ce-dropdown {
