--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -85,6 +85,51 @@ body,
   justify-content: center;
 }
 
+.top-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 3px solid $secondary-500 !important;
+  position: relative;
+  height: 81px;
+}
+
+.top-nav-left {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.top-nav-right {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+  gap: 0.5rem;
+}
+
+.top-nav-logo {
+  width: 3.2rem;
+  height: auto;
+  margin-left: 0.5rem;
+}
+
+.top-nav-github-icon {
+  width: 2.3rem;
+  height: auto;
+}
+
+.top-nav-logout-button {
+  font-size: 1rem !important;
+  padding: 0.4rem !important;
+  margin-top: 0 !important;
+  color: white !important;
+  background-color: transparent !important;
+}
+
+.top-nav-logout-icon {
+  width: 1.5rem !important;
+}
+
 .welcome-logo {
   width: 3rem;
   height: auto;
@@ -101,12 +146,14 @@ body,
   right: 1.5rem;
 }
 
-.welcome-github-icon:hover {
+.welcome-github-icon:hover,
+.top-nav-github-icon:hover {
   opacity: 0.5;
   transition-duration: 0.3s;
 }
 
-.welcome-button {
+.welcome-button,
+.top-nav-logout-button {
   background-color: $tertiary-50;
   border-radius: 8px;
   border-width: 0;
@@ -255,7 +302,6 @@ body,
   top: 0;
   left: 0;
   color: $gray-300 !important;
-  // background: transparent;
   z-index: 1;
 }
 
@@ -374,7 +420,7 @@ body,
 }
 
 .ce-chat-feed {
-  background-color: $primary-600 !important;
+  background-color: transparent !important;
 }
 
 .chat-header {
@@ -382,7 +428,6 @@ body,
   align-items: center;
   justify-content: space-between;
   padding: 10px 30px !important;
-  border-bottom: 1px solid $primary-400 !important;
 }
 
 .ce-chat-header-title {
@@ -395,9 +440,10 @@ body,
 }
 
 .ce-chat-header {
-  background-color: $primary-700 !important;
+  background-color: transparent !important;
   color: $tertiary-50 !important;
-  border-bottom: 1px solid $primary-400 !important;
+  display: flex;
+
   padding: 10px !important;
 }
 
@@ -423,21 +469,20 @@ body,
 }
 
 .ce-message-list {
-  background-color: $primary-800 !important;
+  background-color: transparent !important;
   height: calc((100% - 100px) - 68px) !important;
-  border-bottom: 1px solid $gray-500 !important;
 }
 
 .ce-message-list::-webkit-scrollbar-track {
-  background: $primary-800;
+  background: $primary-600;
 }
 
 .ce-message-list::-webkit-scrollbar-thumb {
-  background: $primary-800;
+  background: $primary-600;
 }
 
 .ce-message-list::-webkit-scrollbar-track:hover {
-  background: $primary-800;
+  background: $primary-600;
 }
 
 .ce-message-list-content {
@@ -450,6 +495,7 @@ body,
   color: $gray-300 !important;
   font-size: 12px !important;
   margin: 10px 0 !important;
+  text-align: inherit !important;
 }
 
 .ce-message-form {
@@ -529,7 +575,6 @@ body,
 .ce-chat-settings-title {
   font-family: "Rubik" !important;
   padding: 20px 0 0 0 !important;
-  border-top: 1px solid $gray-500 !important;
 }
 
 .ce-dropdown {
@@ -559,8 +604,8 @@ body,
 
 .ce-member-delete-button {
   border-radius: 5px !important;
-  background-color: $primary-800 !important;
-  color: $primary-400 !important;
+  background-color: $secondary-800 !important;
+  color: white !important;
   border: 1px solid $primary-400 !important;
   top: 6px !important;
 }
@@ -576,8 +621,8 @@ body,
 
 .ce-danger-button {
   border-radius: 5px !important;
-  background-color: $primary-800 !important;
-  color: $primary-400 !important;
+  background-color: $secondary-800 !important;
+  color: white !important;
   border: 1px solid $primary-400 !important;
 }
 
@@ -591,13 +636,13 @@ body,
 }
 
 ::-webkit-scrollbar-track {
-  background: $primary-700;
+  background: $primary-600;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: $primary-700;
+  background: $primary-600;
 }
 
 ::-webkit-scrollbar-track:hover {
-  background: $primary-700;
+  background: $primary-600;
 }
