--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,7 +24,7 @@ body,
   margin: 0;
   padding: 0;
 
-  font-family: "Rubik", sans-serif;
+  font-family: "Rubik", sans-serif !important;
 }
 
 .layout {
@@ -421,6 +421,13 @@ body,
 
 .ce-chat-feed {
   background-color: transparent !important;
+}
+.ce-spinner {
+  fill: white !important;
+}
+
+.ce-chat-header-subtitle {
+  font-family: "Rubik" !important;
 }
 
 .chat-header {
